Support miner FW auth hardening (#1621)
